# aether_compiler

./: .gitignore  AETHER_SPEC.md  AGENT_EXTENSION_MANUAL.md  Cargo.toml  LICENSE  README.md  aether_schema.json  aethercraft.json  asset_demo.aec  audit.md  changelog.md  knoten_demo_output.txt  knoten_test.txt  llm.md  output.rs  showcase_world.json
.github/workflows/: release.yml
assets/: mesh3d.wgsl  voxel.wgsl
docs/: AETHER_SPEC.md  AUDIT.md  KNOTEN_DSL_DRAFT.md  KNOTEN_SPEC.md  RUST_INGEST.md  STDLIB.md
examples/: invalid_test.json
examples/agent/: agent_fetch.nod
examples/audit/: memory_torture.nod
examples/compiler/: hello_transpiler.nod  native_transpile.nod  transpile_loop.nod
examples/core/: 3d_demo.aec  3d_demo.nod  asset_demo.nod  audio_test.aec  audio_test.nod  c64_demo.aec  c64_demo.nod  complex_ffi_test.aec  complex_ffi_test.nod  cube_demo.aec  cube_demo.nod  handles.nod  math_functions.json  modern_office.json  optimization_test.nod  rust_bridge_test.aec  rust_bridge_test.nod  self_host.nod  self_hosting_compiler.aec  self_hosting_compiler.nod  showcase_v1.aec  showcase_v1.nod  stdlib_demo.nod  stdlib_test.json  test_lib.aec  test_lib.nod  text_editor.aec  text_editor.nod  tiny_test.nod  type_safety_test.aec
examples/final/: standalone_demo.nod
examples/graphics/: 3d_cube.nod  3d_light_demo.nod  blue_window.nod  chess_showcase.nod  doom_mvp.nod  hallway_flex.nod  tech_grid_demo.nod
examples/io/: file_magic.nod
examples/io_test/: logger.nod  main.nod
examples/voxel/: aethercraft.json  showcase_world.json
src/: ast.rs  async_bridge.rs  bootstrap_gen.rs  dsl_emitter.rs  evaluator.rs  executor.rs  lib.rs  llvm_codegen.rs  math.rs  optimizer.rs  parser.rs  renderer.rs  test_lib.rs  validator.rs  vm.rs  voxel.wgsl  window.rs
src/compiler/: codegen.rs
src/natives/: bridge.rs  fs.rs  io.rs  math.rs  mod.rs  registry.rs  ui.rs
src/vm/: compiler.rs  machine.rs  mod.rs  opcode.rs  storage.rs
stdlib/: array_utils.nod  fs.nod  math_ext.nod  registry.nod  string_utils.nod
tests/: array_drop.nod  integration_tests.rs  intentional_crash.knoten  suite.rs
tmp/: aabb_test.knoten
(+1 files in other folders)
