[package]
name = "aether_compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap_gen"
path = "src/bootstrap_gen.rs"

[[bin]]
name = "demo_gen"
path = "src/bin/demo_gen.rs"

[[bin]]
name = "run_aec"
path = "src/bin/run_aec.rs"

[[bin]]
name = "cube_gen"
path = "src/bin/cube_gen.rs"

[[bin]]
name = "audio_test_gen"
path = "src/bin/audio_test_gen.rs"

[dependencies]
bincode = "1.3.3"
bytemuck = "1.25.0"
cpal = "0.17.3"
pollster = "0.4.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "0.20"
winit = "0.29"
