[package]
name = "aether_compiler"
version = "0.1.0"
edition = "2024"



[[bin]]
name = "run_aec"
path = "src/bin/run_aec.rs"

[[bin]]
name = "aether_build"
path = "src/bin/aether_build.rs"


[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
cpal = "0.17.3"
pollster = "0.4.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "23.0"
winit = "0.30"
tobj = "4.0.2"
image = "0.25.1"
hound = "3.5.1"
wgpu_glyph = "0.23"
serde_json = "1.0.149"
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
cgmath = "0.18"
