[package]
name = "knoten_core"
version = "0.1.0"
edition = "2024"



[[bin]]
name = "run_knc"
path = "src/bin/run_knc.rs"

[[bin]]
name = "knoten_build"
path = "src/bin/knoten_build.rs"

[[bin]]
name = "rust_ingest"
path = "src/bin/rust_ingest.rs"

[[bin]]
name = "knoten_upgrade"
path = "src/bin/knoten_upgrade.rs"


[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
cpal = "0.15.3"
pollster = "0.4.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "23.0"
winit = "0.30"
tobj = "4.0.2"
image = "0.25.1"
hound = "3.5.1"
wgpu_glyph = "0.23"
serde_json = "1.0.149"
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
cgmath = "0.18"
rodio = "0.19.0"
noise = "0.9.0"
minifb = "0.28"
glam = { version = "0.32.0", features = ["bytemuck"] }
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
